@@ -57,7 +57,7 @@ typedef struct Scanner {
     bool detect_pp_numbers;      /* lexer should prefer to detect pp-numbers */
     bool enable_import_keyword;  /* recognize import as a keyword */
     bool single_line_only;       /* don't report missing eol's in C++ comments */
-    bool act_in_cpp0x_mode;      /* lexer works in C++0x mode */
+    bool act_in_cpp0x_mode;      /* lexer works in C++11 mode */
 } Scanner;
 
 ///////////////////////////////////////////////////////////////////////////////
