@@ -83,9 +83,9 @@
 #endif
 
 ///////////////////////////////////////////////////////////////////////////////
-//  Decide, whether to support C++0x
+//  Decide, whether to support C++11
 //
-//  To implement C++0x keywords and preprocessor semantics define the following 
+//  To implement C++11 keywords and preprocessor semantics define the following 
 //  to something not equal to zero.
 //
 #if !defined(BOOST_WAVE_SUPPORT_CPP0X)
